--- a/Develop/public/css/style.css
+++ b/Develop/public/css/style.css
@@ -209,6 +209,21 @@ p#type {
   font-style: italic;
   padding: 3em 0;
 }
+.navbar {
+  top: 0;
+}
+
+.navbar:hover .link-text {
+  display: inline;
+}
+
+.navbar:hover .logo svg {
+  margin-left: 11rem;
+}
+
+.navbar:hover .logo-text {
+  left: 0px;
+}
 
 /* Small screens */
 @media only screen and (max-width: 650px) {
@@ -217,21 +232,3 @@ p#type {
   }
 }
 
-/* Large screens */
-@media only screen and (min-width: 600px) {
-  .navbar {
-    top: 0;
-  }
-
-  .navbar:hover .link-text {
-    display: inline;
-  }
-
-  .navbar:hover .logo svg {
-    margin-left: 11rem;
-  }
-
-  .navbar:hover .logo-text {
-    left: 0px;
-  }
-}
